manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "functiononkubernate-712d"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "functiononkubernate-712d"
  template:
    metadata:
      labels:
        app: "functiononkubernate-712d"
    spec:
      containers:
        - name: "functiononkubernate-712d"
          image: "fokacr.azurecr.io/functiononkubernate"
          ports:
          - containerPort: 80
