manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "functiononkubernate-712d"
    labels:
        app: "functiononkubernate-712d"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: function-on-kubernate82b5-functiononkubernate-712d.437396507e7949f6939c.southeastasia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "functiononkubernate-712d"
                servicePort: 80
